lwcrecipies-master/force-app/main/default/objects/Shipping_Invoice__c/Shipping_Invoice__c.object-meta.xml
<CustomObject>
    <label>Shipping Invoice</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shipping Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>