lwcrecipies-master/force-app/main/default/objects/Shipping_Invoice__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This Lookup fields will be used to track the Customers for which the Invoice is being Created</description>
    <label>Customer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Shipping_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>