lwcrecipies-master/force-app/main/default/objects/Shipping_Invoice__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <displayFormat>INV - {0000}</displayFormat>
    <inlineHelpText>This is auto generated field which generates the Invoice No for each Shipping Invoice Record.</inlineHelpText>
    <label>Invoice #</label>
    <type>AutoNumber</type>
</CustomField>