lwcrecipies-master/force-app/main/default/objects/Shipping_Invoice__c/fields/Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipping Address</label>
    <referenceTo>Address_Book__c</referenceTo>
    <relationshipLabel>Shipping Invoices</relationshipLabel>
    <relationshipName>Shipping_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>