lwcrecipies-master/force-app/main/default/objects/Shipping_Invoice__c/fields/Shipping_Charge__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Charge__c</fullName>
    <label>Shipping Charge</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>