lwcrecipies-master/force-app/main/default/objects/Shipping_Invoice__c/fields/Shipping_Rate__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Rate__c</fullName>
    <label>Shipping Rate (%)</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>