lwcrecipies-master/force-app/main/default/objects/Shipping_Invoice__c/fields/Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>Tax_Amount__c</fullName>
    <inlineHelpText>This field will be auto populated once any items will be added to this Invoice. Please do not fill any value for this field.</inlineHelpText>
    <label>Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>