lwcrecipies-master/force-app/main/default/objects/Shipping_Invoice__c/fields/TotalWeight__c.field-meta.xml
<CustomField>
    <fullName>TotalWeight__c</fullName>
    <label>TotalWeight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>