lwcrecipies-master/force-app/main/default/objects/Shipping_Invoice__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>GrandTotal__c</columns>
    <columns>Shipping__c</columns>
    <columns>ShippingDiscount__c</columns>
    <columns>Subtotal__c</columns>
    <columns>Tax__c</columns>
    <columns>TotalWeight__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>